--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -1,5 +1,10 @@
-<div style="text-align:center">
-  <h1>
-    Here we are: {{results}}!!
-  </h1>
+<div>
+  <button (click)='event()'> schiaccia per visualizare</button>
+  <ul *ngFor="let item of results">
+    <li ><p><b>nome prodotto:</b> {{item.product_name}}</p></li>
+    <li><p><b>fornitore: </b>{{item.supplier}}</p></li>
+    <li><p><b>quantità: </b>{{item.quantity}}</p></li>
+    <li><p><b>costo unitario:</b> {{item.unit_cost}}</p></li>
+    <li><hr></li>
+  </ul>
 </div>
